--- a/GUI/Properties/Resources.resx
+++ b/GUI/Properties/Resources.resx
@@ -568,4 +568,7 @@
   <data name="financial_16x16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\financial_16x16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="picture_card_no_image" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\picture_card_no_image.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
